--- a/Sadi/index.html
+++ b/Sadi/index.html
@@ -439,7 +439,7 @@
   <div class="profile">
     <div class="avatar-wrap">
       <div class="avatar">
-        <img src="arvind.jpg" alt="Arvind" style="width:100%;height:100%;object-fit:cover">
+        <img src="Arvind.jpg" alt="Arvind" style="width:100%;height:100%;object-fit:cover">
         <svg viewBox="0 0 24 24"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
       </div>
     </div>
